<resources>
    <string name="user_data_key">USERDATA</string>
    <string name="shared_preferences_key">SHAREDPREFKEY</string>
    <string name="token_key">TOKENKEY</string>
    <string name="language_key">LANGUAGEKEY</string>
    <string name="app_name">3T</string>
    <string name="sign_up">Sign up for free</string>
    <string name="log_in">Or Login</string>
    <string name="login_with_username">Login With Username</string>
    <string name="login_with_email">Login With Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="learners">Learners</string>
    <string name="forget_password">Forget <b><font color="#4156FF">password</font></b>?</string>
    <string name="signup">Sign Up</string>
    <string name="confirmed_password">Confirmed Password</string>
    <string name="signup_with_username">Sign Up With Username</string>
    <string name="remember_me">Remember Me</string>
    <string name="alma_mater">Alma Mater</string>
    <string name="policy_string">By signing up, i accept 3T’s\n <font color="#4156FF">Terms of service</font> and <font color="#4156FF">Privacy policy</font></string>
    <string name="login_policy">By logging in, i accept 3T’s\n<font color="#4156FF">Terms of service</font> and <font color="#4156FF">Privacy policy</font></string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello</string>
    <string name="bookmark_topic">Bookmark Topic</string>
    <string name="my_account">My Account</string>
    <string name="collection">Collection</string>
    <string name="close">Close</string>
    <string name="save_key">Save</string>
    <string name="competition">Competition</string>
    <string name="logout">Logout</string>
    <string name="register_success">Register successfully</string>
    <string name="study">Study</string>
    <string name="password_not_match">Password are not matched</string>
    <string name="please_fill">Please fill all information</string>
    <string name="learn_today">What would you like to learn for today ?</string>
    <string name="notification">Notification</string>
    <string name="upgrade">Upgrade</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="email_or_username">Email or Username</string>
    <string name="topic">Topics</string>
    <string name="see_all">See all</string>
    <string name="folder">Folder</string>
    <string name="classes">Classes</string>
    <string name="no_topics">No Topics</string>
    <string name="no_folders">No Folders</string>
    <string name="no_classes">No Classes</string>
    <string name="topic_folder_classes">Topic, Folder</string>
    <string name="library">Library</string>
    <string name="search">Search</string>
    <string name="add_topic">Add Topic</string>
    <string name="add_class">Add Class</string>
    <string name="add_folder">Add Folder</string>
    <string name="add_vocabulary">Add Vocabulary</string>
    <string name="remove_all_vocabulary">Remove All Vocabularies</string>
    <string name="english_word">English Word</string>
    <string name="vietnamese_word">Vietnamese Word</string>
    <string name="english_meaning">English Terminology</string>
    <string name="vietnamese_meaning">Vietnamese Terminology</string>
    <string name="topic_title_english">English Topic Title</string>
    <string name="topic_title_vietnamese">Vietnamese Topic Title</string>
    <string name="topic_description">Topic Description</string>
    <string name="import_document">Import Document</string>
    <string name="topic_description_english">English Topic Description</string>
    <string name="topic_description_vietnamese">Vietnamese Topic Description</string>
    <string name="topic_vocabulary">Topic Vocabularies</string>
    <string name="publish_to_all">Published To Everyone</string>
    <string name="create_topic_success">Create Topic Successfully</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="internet_permission_denied">Internet Permission Denied</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="create_topic_text">Take the first step\n towards better grades.\n Create a study topic.</string>
    <string name="create_folder_text">Take the first step\n towards better grades.\n Create a study folder.</string>
    <string name="create_folder">Create Folder</string>
    <string name="folder_name">Folder Name English</string>
    <string name="folder_name_vietnamese">Folder Name Vietnamese</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="please_enter_folder_name">Please enter folder name</string>
    <string name="create_folder_success">Create Folder Successfully</string>
    <string name="no_topic_in_folder">No Topics In Folder</string>
    <string name="add_topic_in_folder_to_see">Add Topics In Folder To See</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="update_folder_successfully">Update Folder Successfully</string>
    <string name="remove_folder_successfully">Remove Folder Successfully</string>
    <string name="update_folder_failed">Remove Folder</string>
    <string name="remove_folder_failed">Remove Folder</string>
    <string name="remove_folder_confirm_message">Are you sure you want to remove this folder ?</string>
    <string name="premium_account_only">This feature is only available to premium account</string>
    <string name="please_add_vocabulary">Please add vocabulary</string>
    <string name="tts_init_failed">Text to speech initialization failed</string>
    <string name="language_not_supported">Language not supported</string>
    <string name="learn_by_flashcard">Learn by Flashcard</string>
    <string name="learn_by_quiz">Learn by Quiz</string>
    <string name="learn_by_typing">Learn by Typing</string>
    <string name="add_topic_to_folder">Add Topic To Folder</string>
    <string name="save_and_edit_topic">Save And Edit Topic</string>
    <string name="add_topic_success">Add Topic Successfully</string>
    <string name="delete_topic_success">Delete Topic Successfully</string>
    <string name="update_topic_failed">Update Topic Failed</string>
    <string name="set_up_your_test">Set up your test</string>
    <string name="question_count">Question Count</string>
    <string name="study_language">Study Language</string>
    <string name="answer_by">Answer By</string>
    <string name="start">Start</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="answer_options">Answer Options</string>
    <string name="definition">Definition</string>
    <string name="prompt_by">Prompt By</string>
    <string name="accept">Accept</string>
    <string name="shuffle_question">Shuffle Question</string>
    <string name="correct">Correct</string>
    <string name="correct_answer">You have chosen the correct answer!</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="you_have_answered">You have answered</string>
    <string name="the_correct_answer_is">The correct answer is</string>
    <string name="your_result">Your Result</string>
    <string name="next_steps">Next Steps</string>
    <string name="try_again">Try Again</string>
    <string name="incorrect">Incorrect</string>
    <string name="you_know_your_stuff">You know your stuff!</string>
    <string name="you_need_to_study_more">You need to study more!</string>
    <string name="practice_again">Practice with the topic terms until you\'ve gotten them right</string>
    <string name="very_good">You have studied very well! Learn again or try another test</string>
    <string name="your_answers">Your Answers</string>
    <string name="instant_feedback">Instant Feedback</string>
    <string name="answer_by_definition">Answer By Definition</string>
    <string name="answer_by_term">Answer By Prompt</string>
    <string name="dont_know">Don\'t Know</string>
    <string name="bookmark_vocabulary_failed">Bookmark Vocabulary Failed</string>
    <string name="remove_bookmark_vocabulary_failed">Remove Bookmark Vocabulary Failed</string>
    <string name="bookmark_vocabulary_success">Bookmark Vocabulary Successfully</string>
    <string name="remove_bookmark_vocabulary_success">Remove Bookmark Vocabulary Successfully</string>
    <string name="options">Options</string>
    <string name="shuffle">Shuffle</string>
    <string name="play_audio">Play Audio</string>
    <string name="card_orientation">Card Orientation</string>
    <string name="apply">Apply</string>
    <string name="study_all">Study All</string>
    <string name="study_bookmark">Study Bookmark</string>
    <string name="achievements">Achievements</string>
    <string name="reset_password">Reset your password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="ranking">Ranking</string>
    <string name="learning_count">Learning Count</string>
    <string name="rank">Rank</string>
    <string name="sort_by_time_learned">Sort By Time Learned</string>
    <string name="sort_by_learning_count">Sort By Learning Count</string>
    <string name="sort_by_progress">Sort By Progress</string>
    <string name="sort_by_vocabulary_learned">Sort By Vocabulary Learned</string>
    <string name="vocabularies_learned">Vocabularies Learned</string>
    <string name="time_learned">Time Learned</string>
    <string name="empty_ranking">No one has learned this topic</string>
    <string name="learn_and_test">Learn and Test</string>
    <string name="learn_and_test_text">Create custom quizzes and tests for faster learning</string>
    <string name="customized_sets">Customized Sets</string>
    <string name="upgrade_premium_success">Upgrade Premium Successfully</string>
    <string name="premium_account">Premium Account</string>
    <string name="user_statistics">User Statistics</string>
    <string name="customized_sets_text">Create custom sets of flashcards to study and test yourself on</string>
    <string name="obtained">Obtained</string>
    <string name="not_owned">Not Owned</string>
    <string name="understand">Understand</string>
    <string name="settings">Settings</string>
    <string name="invalid_file_type">Invalid File Type</string>
    <string name="vocabulary_statistic">Vocabulary Statistic</string>
    <string name="proficient">Proficient</string>
    <string name="learning">Learning</string>
    <string name="not_learned">Not Learned</string>
    <string name="export_to_csv">Export To CSV</string>
    <string name="export_to_csv_success">Export To CSV Successfully</string>
    <string name="export_to_csv_failed">Export To CSV Failed</string>
    <string name="intro_one">3T is a web tool and a mobile app that boosts students learning through several study tools that include flashcards and game-based quizzes.</string>
    <string name="intro_two">3T: Elevate learning with flashcards and game-based quizzes on our web and mobile app.</string>
    <string name="intro_three">3T: Your go-to web and mobile app for enhanced learning, featuring dynamic study tools like flashcards and game-based quizzes.</string>
    <string name="intro_four">Empower your learning with 3T: The web and mobile app redefining education through flashcards and game-based quizzes.</string>
    <string name="change_password_text">Enter your old and new password below to change your password.</string>
    <string name="reset_password_text">Enter your email address below and we will send you a link to reset your password.</string>
</resources>