<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:background="@color/dark_color"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="20sp"
        android:fontFamily="@font/bevietnampro_semibold"
        android:textColor="@color/white"
        android:text="@string/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginVertical="20dp"
        android:text="@string/reset_password_text"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/emailField"
        android:textColor="@color/white"
        android:textColorHint="@color/quaternary_color"
        android:hint="@string/email_or_username"
        android:backgroundTint="@color/secondary_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            app:backgroundTint="@null"
            android:textColor="@color/tertiary_color"
            android:id="@+id/cancelBtn"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            app:backgroundTint="@null"
            android:layout_marginStart="20dp"
            android:textColor="@color/tertiary_color"
            android:id="@+id/acceptBtn"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:text="@string/ok"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>