<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginHorizontal="15dp"
    android:layout_width="match_parent"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_color"
    android:layout_height="match_parent">
    <TextView
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/create_folder"
        android:layout_width="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:textSize="18sp"
        android:id="@+id/folderNameEdt"
        android:textColorHint="@color/quaternary_color"
        android:hint="@string/folder_name"
        android:textColor="@color/white"
        android:backgroundTint="@color/secondary_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>
    <EditText
        android:textSize="18sp"
        android:id="@+id/folderNameVietnameseEdt"
        android:textColorHint="@color/quaternary_color"
        android:hint="@string/folder_name_vietnamese"
        android:textColor="@color/white"
        android:backgroundTint="@color/secondary_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/createFolderCancelBtn"
            android:text="@string/cancel"
            android:background="@android:color/transparent"
            app:backgroundTint="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/createFolderBtn"
            android:text="@string/ok"
            android:background="@android:color/transparent"
            app:backgroundTint="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>