<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/dark_color"
    android:layout_width="match_parent"
    android:paddingVertical="20dp"
    android:paddingHorizontal="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <TextView
        android:textSize="22sp"
        android:textAlignment="center"
        android:fontFamily="@font/bevietnampro_semibold"
        android:textColor="@color/white"
        android:text="@string/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageButton
                android:scaleType="fitXY"
                android:padding="10dp"
                android:background="@drawable/circular_btn"
                android:id="@+id/shuffleBtn"
                android:src="@drawable/baseline_shuffle_24"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <TextView
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/shuffle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageButton
                android:scaleType="fitXY"
                android:padding="10dp"
                android:background="@drawable/circular_btn"
                android:id="@+id/autoPlaySoundBtn"
                android:src="@drawable/outline_volume_up_24"
                android:layout_width="50dp"
                android:layout_marginHorizontal="5dp"
                android:layout_height="50dp"/>
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/white"
                android:text="@string/play_audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:textSize="12sp"
        android:text="@string/card_orientation"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/vocabularyFirstBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:backgroundTint="@null"
            app:strokeWidth="1dp"
            android:background="@color/dark_color"
            android:layout_marginEnd="5dp"
            app:cornerRadius="2dp"
            android:textColor="@color/white"
            android:text="@string/vocabulary"
            app:strokeColor="@color/white"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/definitionFirstBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            app:backgroundTint="@null"
            android:textColor="@color/white"
            app:strokeWidth="1dp"
            android:text="@string/definition"
            android:background="@color/dark_color"
            app:cornerRadius="2dp"
            app:strokeColor="@color/white"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:textSize="12sp"
        android:text="@string/study_language"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/englishFirstBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@color/dark_color"
            android:layout_marginEnd="5dp"
            app:cornerRadius="2dp"
            android:textColor="@color/white"
            android:text="@string/english"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/vietnameseFirstBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            app:backgroundTint="@null"
            android:textColor="@color/white"
            android:text="@string/vietnamese"
            android:background="@color/dark_color"
            app:cornerRadius="2dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="20dp"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:id="@+id/applyBtn"
        android:text="@string/apply"
        android:background="@drawable/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>